--- a/CantStop/.classpath
+++ b/CantStop/.classpath
@@ -13,5 +13,10 @@
 	<classpathentry kind="lib" path="libs/spring-expression-4.0.6.RELEASE.jar"/>
 	<classpathentry kind="lib" path="libs/spring-test-4.0.6.RELEASE.jar"/>
 	<classpathentry kind="lib" path="libs/spring-aop-4.0.6.RELEASE.jar"/>
+	<classpathentry kind="lib" path="libs/commons-lang3-3.3.2.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/home/buxi/development/commons-lang3-3.3.2/commons-lang3-3.3.2-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
