--- a/CantStop/WebContent/WEB-INF/classes/log4j.properties
+++ b/CantStop/WebContent/WEB-INF/classes/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=DEBUG,stdout
+log4j.rootLogger=INFO,stdout
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern = %d{DATE} %5p [%t] (%F\:%L) - %m%n
@@ -6,4 +6,4 @@ log4j.appender.stdout.layout.ConversionPattern = %d{DATE} %5p [%t] (%F\:%L) - %m
 log4j.logger.org.springframework=INFO
 log4j.logger.org.springframework.oxm=INFO
 log4j.logger.org.springframework.transaction=WARN
-log4j.logger.org.springframework.web=DEBUG
+log4j.logger.org.springframework.web=INFO
