--- a/CantStop/.classpath
+++ b/CantStop/.classpath
@@ -9,8 +9,16 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/servlet-api.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-aop-4.0.6.RELEASE.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-beans-4.0.6.RELEASE.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-context-4.0.6.RELEASE.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-context-support-4.0.6.RELEASE.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-context-4.0.6.RELEASE.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/home/buxi/development/spring-framework-4.0.6.RELEASE/libs/spring-context-4.0.6.RELEASE-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-context-support-4.0.6.RELEASE.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/home/buxi/development/spring-framework-4.0.6.RELEASE/libs/spring-context-support-4.0.6.RELEASE-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-core-4.0.6.RELEASE.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-expression-4.0.6.RELEASE.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-web-4.0.6.RELEASE.jar" sourcepath="/home/buxi/development/spring-framework-4.0.6.RELEASE/libs/spring-web-4.0.6.RELEASE-sources.jar"/>
