13: Storing game information in database (JDBC implementation)
Task-Url: http://github.com/tibor-varga/cantstop/issues/issue/13

first records are stored in DB

--- a/CantStop/WebContent/WEB-INF/web.xml
+++ b/CantStop/WebContent/WEB-INF/web.xml
@@ -17,6 +17,7 @@
     <param-value>
     	/WEB-INF/cantstop-service.xml
     	/WEB-INF/cantstop-model.xml
+    	/WEB-INF/cantstop-database-jdbc.xml
     </param-value>
   </context-param>
   
