12: AOP Support for monitoring player activities
Task-Url: http://github.com/tibor-varga/cantstop/issues/issue/12

--- a/CantStop/WebContent/WEB-INF/web.xml
+++ b/CantStop/WebContent/WEB-INF/web.xml
@@ -27,7 +27,7 @@
     <init-param>
     	<!-- Location of HSQLDB database files -->
 		<param-name>hsqldb.server.database</param-name> 
-		<param-value>./WEB-INF/database/</param-value> 
+		<param-value>database/</param-value> 
 	</init-param>
 	<init-param>
     	<!-- database files are placed in WEB-INF -->
