--- a/CantStop/.classpath
+++ b/CantStop/.classpath
@@ -47,6 +47,11 @@
 			<attribute name="javadoc_location" value="jar:file:/home/buxi/development/spring-framework-4.0.6.RELEASE/libs/spring-tx-4.0.6.RELEASE-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-compress-1.9.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/home/buxi/development/commons-compress-1.9/commons-compress-1.9-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
