--- a/CantStop/.classpath
+++ b/CantStop/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="src" path="utils"/>
+	<classpathentry kind="src" path="test_production"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="libs/mockito-all-1.9.5.jar"/>
 	<classpathentry kind="lib" path="libs/spring-test-4.0.6.RELEASE.jar" sourcepath="/home/buxi/development/spring-framework-4.0.6.RELEASE/libs/spring-test-4.0.6.RELEASE-sources.jar">
@@ -66,5 +67,10 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="/home/buxi/development/selenium-server-standalone-2.44.0.jar" sourcepath="/home/buxi/development/selenium-2.44.0/selenium-java-2.44.0-srcs.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/home/buxi/development/selenium-2.44.0/selenium-server-2.44.0-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
