--- a/CantStop/cantstop-webapp/pom.xml
+++ b/CantStop/cantstop-webapp/pom.xml
@@ -42,15 +42,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>jstl</groupId>
-			<artifactId>jstl</artifactId>
-			<version>1.2</version>
-		</dependency>
-		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.0.1</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -72,6 +66,18 @@
 			<artifactId>selenium-server</artifactId>
 			<version>2.44.0</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>4.1.2.RELEASE</version>
+		</dependency>
+
+
 	</dependencies>
 	<build>
 		<finalName>cantstop-webapp</finalName>
