--- a/CantStop/cantstop-webapp/pom.xml
+++ b/CantStop/cantstop-webapp/pom.xml
@@ -10,8 +10,21 @@
 	</parent>
 	<artifactId>cantstop-webapp</artifactId>
 	<packaging>war</packaging>
+	<build>
+		<finalName>cantstop-webapp</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.18</version>
+				<configuration>
+					<testFailureIgnore>true</testFailureIgnore>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
-	<name>cantstop-webapp Maven Webapp</name>
+	<name>cantstop-webapp</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
 		<dependency>
@@ -27,6 +40,11 @@
 		<dependency>
 			<groupId>de.vt</groupId>
 			<artifactId>cantstop-service</artifactId>
+			<version>2.5.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>de.vt</groupId>
+			<artifactId>cantstop-utils</artifactId>
 			<version>2.5.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
@@ -74,13 +92,10 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>4.1.2.RELEASE</version>
+			<version>4.1.1.RELEASE</version>
 		</dependency>
 
 
 	</dependencies>
-	<build>
-		<finalName>cantstop-webapp</finalName>
-	</build>
 
 </project>
