--- a/CantStop/pom.xml
+++ b/CantStop/pom.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>de.vt</groupId>
-  <artifactId>CantStop</artifactId>
-  <version>2.5.1-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <modules>
-  	<module>cantstop-model</module>
-    <module>cantstop-service</module>
-    <module>cantstop-webapp</module>
-    <module>cantstop-persist</module>
-    <module>cantstop-utils</module>
-  </modules>
-  <dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>de.vt</groupId>
+	<artifactId>CantStop</artifactId>
+	<version>2.5.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
+	<modules>
+		<module>cantstop-model</module>
+		<module>cantstop-service</module>
+		<module>cantstop-webapp</module>
+		<module>cantstop-persist</module>
+		<module>cantstop-utils</module>
+	</modules>
+	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -23,8 +24,18 @@
 			<artifactId>spring-jdbc</artifactId>
 			<version>4.1.1.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<version>1.7.7</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.7</version>
+		</dependency>
 	</dependencies>
-		<build>
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -36,17 +47,17 @@
 				</configuration>
 			</plugin>
 			<plugin>
-            <groupId>org.apache.tomcat.maven</groupId>
-            <artifactId>tomcat7-maven-plugin</artifactId>
-            <version>2.1</version>
-            <configuration>
-                <url>http://localhost:8080/manager/text</url>
-                <server>cantstop</server>
-                <path>/cantstop</path>
-                <username>tomcat</username>
-                <password>tomcat</password>
-            </configuration>
-            </plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.1</version>
+				<configuration>
+					<url>http://localhost:8080/manager/text</url>
+					<server>cantstop</server>
+					<path>/cantstop</path>
+					<username>tomcat</username>
+					<password>tomcat</password>
+				</configuration>
+			</plugin>
 
 		</plugins>
 	</build>
