--- a/CantStop/cantstop-webapp/pom.xml
+++ b/CantStop/cantstop-webapp/pom.xml
@@ -18,7 +18,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.18</version>
 				<configuration>
-					<testFailureIgnore>true</testFailureIgnore>
+					<testFailureIgnore>false</testFailureIgnore>
 				</configuration>
 			</plugin>
 		</plugins>
